Updated files with new changes

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ body{
 <div class="app">
 <div class="card">
 <div class="cardimg"><img src="logo.png" alt="logo"></div>
-<div class="cardinfo">💎 UPDATED MINES HACK — USE FOR ALL PLATFORM</div>
+<div class="cardinfo">MINES HACK 💎<br>USE 4 ALL PLATFORM 🎮<br>USE 4 ALL COUNTRY 🌐</div>
 </div>
 
 <div class="main-box">
