Updated files with new changes

--- a/howtouse.html
+++ b/howtouse.html
@@ -198,7 +198,7 @@ input[type="checkbox"] {
 <div class="app blocked" id="main-app" aria-hidden="true">
   <h2>How to Use</h2>
   <h3>HYPER ALGORITHMIC CALCULATION KIT</h3>
-  <h3>USE FOR ALL PLATFORM (आप किसी भी गेम के लिए ये mines hack का उपयोग कर सकते हो) ex: 51GAME, 91CLUB, BIG DADDY, BIG MUMBAI, STAKE, 1WIN, 1XBET, PARI MATCH, ETC</h3>
+  <h3>USE FOR ALL PLATFORM & ALL COUNTRY ex: 51GAME, 91CLUB, BIG DADDY, BIG MUMBAI, STAKE, 1WIN, 1XBET, PARI MATCH, ETC</h3>
   <ul>
     <li>Select your mines using the dropdown arrow.</li>
     <li>Click <b>START</b> to reveal results.</li>
@@ -206,7 +206,18 @@ input[type="checkbox"] {
     <li>Use <b>NEXT</b> to continue playing with the same mines.</li>
     <li>To change mines, click the arrow again → it resets everything.</li>
   </ul>
-  <div class="image-box"><img src="lvl.png" alt="Level Chart"></div>
+  <ul>
+    <h2>MINES & STAR DETAILS</h2>
+    <li>MINES <b>1💣</b> STAR <b>20⭐️</b> GET <b>4.85x💰</b></li>
+    <li>MINES <b>2💣</b> STAR <b>15⭐️</b> GET <b>6.47x💰</b></li>
+    <li>MINES <b>3💣</b> STAR <b>10⭐️</b> GET <b>4.90x💰</b></li>
+    <li>MINES <b>4💣</b> STAR <b>8⭐️</b> GET <b>5.51x💰</b></li>
+    <li>MINES <b>5💣</b> STAR <b>7⭐️</b> GET <b>6.01x💰</b></li>
+    <li>MINES <b>6💣</b> STAR <b>6⭐️</b> GET <b>6.33x💰</b></li>
+    <li>MINES <b>10💣</b> STAR <b>4⭐️</b> GET <b>8.89x💰</b></li>
+    <li>MINES <b>12💣</b> STAR <b>4⭐️</b> GET <b>7.80x💰</b></li>
+    <li>MINES <b>15💣</b> STAR <b>3⭐️</b> GET <b>18.59x💰</b></li>
+  </ul>
   <button class="primary" onclick="window.location.href='index.html'">⬅ Back</button>
 </div>
 
@@ -217,7 +228,7 @@ input[type="checkbox"] {
     </div>
     <div class="disclaimer-body">
       <p><strong>Play at your own risk.</strong> This is a luck-based game and <strong>results are random.</strong> No guarantees are provided. Screenshots and videos are for demonstration, educational, and entertainment purposes only. Please play only on demo/training accounts for fun.</p>
-      <p><strong>We do not promote gambling.</strong> This tool is shared for fun and educational purposes only. Links are provided only for users who already play these types of games. Do NOT place real-money bets based on this tool.</p>
+      <p><strong>We do not promote gambling.</strong> This tool is shared for fun and educational purposes only. Links are provided only for open demo accounts.</p>
       <p><strong>Platforms:</strong> "USE FOR ALL PLATFORM" refers to platforms where mines-style games exist. <strong>Use those platforms only on demo/training accounts.</strong></p>
       <p><strong>Countries & legality:</strong> "USE FOR ALL COUNTRY" is informational only. Follow your local laws.</p>
       <p><strong>Seller / buyer responsibility:</strong> Buyers must ensure legality. We assume demo, educational, or entertainment use only.</p>
