--- a/howtouse.html
+++ b/howtouse.html
@@ -186,6 +186,27 @@ input[type="checkbox"] {
   box-shadow:none;
 }
 
+/* Permanent Disclaimer Button */
+#disclaimer-btn {
+  position:fixed;
+  bottom:18px;
+  right:18px;
+  z-index:999;
+  background:var(--gold);
+  color:#111;
+  font-weight:700;
+  border:none;
+  border-radius:50px;
+  padding:10px 18px;
+  cursor:pointer;
+  box-shadow:0 6px 20px rgba(0,0,0,0.5);
+  transition:all 0.3s ease;
+}
+#disclaimer-btn:hover {
+  transform:scale(1.05);
+  filter:brightness(1.1);
+}
+
 @media (max-width:480px){
   .disclaimer-card {border-radius:12px;}
   .disclaimer-header h3 {font-size:18px;text-align:center;}
@@ -221,6 +242,9 @@ input[type="checkbox"] {
   <button class="primary" onclick="window.location.href='index.html'">⬅ Back</button>
 </div>
 
+<!-- Permanent Disclaimer Button -->
+<button id="disclaimer-btn">disclaimer</button>
+
 <div id="disclaimer-modal" role="dialog" aria-modal="true" aria-labelledby="disclaimer-title">
   <div class="disclaimer-card">
     <div class="disclaimer-header">
@@ -233,11 +257,11 @@ input[type="checkbox"] {
       <p><strong>Countries & legality:</strong> "USE FOR ALL COUNTRY" is informational only. Follow your local laws.</p>
       <p><strong>Seller / buyer responsibility:</strong> Buyers must ensure legality. We assume demo, educational, or entertainment use only.</p>
       <p><strong>We do NOT hack games:</strong> This product is a "Hyper Algorithmic Calculation Kit" — it is NOT a game hack.</p>
+      <p><strong>Note:</strong> This website is created with the help of ChatGPT using HTML, CSS, and JavaScript, and converted to an APK using WebIntoApp.</p>
     </div>
     <div class="disclaimer-controls">
       <div class="ctrl-row"><label><input type="checkbox" id="age-confirm"> I confirm I am 18 years or older</label></div>
       <div class="ctrl-row"><label><input type="checkbox" id="demo-confirm"> I will only use demo/training accounts (no real-money bets)</label></div>
-      <div class="ctrl-row"><label><input type="checkbox" id="dont-show"> Don't show this again on this device</label></div>
       <div class="actions">
         <button id="got-it" class="btn-primary" disabled>I Understand — Proceed</button>
       </div>
@@ -252,11 +276,7 @@ input[type="checkbox"] {
   const gotIt = document.getElementById('got-it');
   const ageConfirm = document.getElementById('age-confirm');
   const demoConfirm = document.getElementById('demo-confirm');
-  const dontShow = document.getElementById('dont-show');
-
-  const DISMISS_KEY = 'howto_disclaimer_dismissed_v2';
-  const AGE_KEY = 'howto_age_confirmed_v2';
-  const DEMO_KEY = 'howto_demo_confirmed_v2';
+  const discBtn = document.getElementById('disclaimer-btn');
 
   function updateBtn(){
     gotIt.disabled = !(ageConfirm.checked && demoConfirm.checked);
@@ -270,11 +290,6 @@ input[type="checkbox"] {
   }
 
   function closeModal(){
-    try {
-      if(dontShow.checked) localStorage.setItem(DISMISS_KEY,'1');
-      localStorage.setItem(AGE_KEY,ageConfirm.checked?'1':'0');
-      localStorage.setItem(DEMO_KEY,demoConfirm.checked?'1':'0');
-    } catch(e){}
     modal.classList.remove('show');
     app.classList.remove('blocked');
     document.body.style.overflow='';
@@ -283,25 +298,13 @@ input[type="checkbox"] {
   ageConfirm.addEventListener('change',updateBtn);
   demoConfirm.addEventListener('change',updateBtn);
 
-  gotIt.addEventListener('click',()=>{
-    if(!gotIt.disabled) closeModal();
-  });
+  gotIt.addEventListener('click',()=>{ if(!gotIt.disabled) closeModal(); });
+
+  discBtn.addEventListener('click',openModal);
 
   window.addEventListener('load',()=>{
-    let skip=false;
-    try{
-      const dismissed=localStorage.getItem(DISMISS_KEY)==='1';
-      const ageOk=localStorage.getItem(AGE_KEY)==='1';
-      const demoOk=localStorage.getItem(DEMO_KEY)==='1';
-      if(dismissed && ageOk && demoOk) skip=true;
-      else{
-        if(ageOk) ageConfirm.checked=true;
-        if(demoOk) demoConfirm.checked=true;
-        if(dismissed) dontShow.checked=true;
-      }
-    }catch(e){}
-    if(!skip) openModal();
-    else app.classList.remove('blocked');
+    // ALWAYS show disclaimer on every page load
+    openModal();
     updateBtn();
   });
 })();
