Updated files with new changes

--- a/howtouse.html
+++ b/howtouse.html
@@ -218,12 +218,11 @@ input[type="checkbox"] {
 
 <div class="app blocked" id="main-app" aria-hidden="true">
   <h2>How to Use</h2>
-  <h3>HYPER ALGORITHMIC CALCULATION KIT</h3>
+  <h3><b>(HACK) HYPER ALGORITHMIC CALCULATION KIT</b></h3>
   <h3>USE FOR ALL PLATFORM & ALL COUNTRY ex: 51GAME, 91CLUB, BIG DADDY, BIG MUMBAI, STAKE, 1WIN, 1XBET, PARI MATCH, ETC</h3>
   <ul>
     <li>Select your mines using the dropdown arrow.</li>
     <li>Click <b>START</b> to reveal results.</li>
-    <li>If your 1st bet loss then follow same prediction with 2nd level then 3rd and 4th.</li>
     <li>Use <b>NEXT</b> to continue playing with the same mines.</li>
     <li>To change mines, click the arrow again → it resets everything.</li>
   </ul>
@@ -232,12 +231,14 @@ input[type="checkbox"] {
     <li>MINES <b>1💣</b> STAR <b>20⭐️</b> GET <b>4.85x💰</b></li>
     <li>MINES <b>2💣</b> STAR <b>15⭐️</b> GET <b>6.47x💰</b></li>
     <li>MINES <b>3💣</b> STAR <b>10⭐️</b> GET <b>4.90x💰</b></li>
-    <li>MINES <b>4💣</b> STAR <b>8⭐️</b> GET <b>5.51x💰</b></li>
+    <li>MINES <b>4💣</b> STAR <b>8⭐️</b> GET <b>5.15x💰</b></li>
     <li>MINES <b>5💣</b> STAR <b>7⭐️</b> GET <b>6.01x💰</b></li>
     <li>MINES <b>6💣</b> STAR <b>6⭐️</b> GET <b>6.33x💰</b></li>
     <li>MINES <b>10💣</b> STAR <b>4⭐️</b> GET <b>8.89x💰</b></li>
     <li>MINES <b>12💣</b> STAR <b>4⭐️</b> GET <b>7.80x💰</b></li>
     <li>MINES <b>15💣</b> STAR <b>3⭐️</b> GET <b>18.59x💰</b></li>
+    <li><b>This is the minimum amount mentioned, you may get more 0.00x, it depends on your bet ammount</b></li>
+    <li><b>only use demo/training accounts (no real-money bets)</b></li>
   </ul>
   <button class="primary" onclick="window.location.href='index.html'">⬅ Back</button>
 </div>
@@ -257,6 +258,7 @@ input[type="checkbox"] {
       <p><strong>Countries & legality:</strong> "USE FOR ALL COUNTRY" is informational only. Follow your local laws.</p>
       <p><strong>Seller / buyer responsibility:</strong> Buyers must ensure legality. We assume demo, educational, or entertainment use only.</p>
       <p><strong>We do NOT hack games:</strong> This product is a "Hyper Algorithmic Calculation Kit" — it is NOT a game hack.</p>
+      <p><strong>Note: This APK was created purely for fun and time-pass purposes. The price is set at ₹555 / $7 for delivery and support.</p>
       <p><strong>Note:</strong> This website is created with the help of ChatGPT using HTML, CSS, and JavaScript, and converted to an APK using WebIntoApp.</p>
     </div>
     <div class="disclaimer-controls">
