Updated files with new changes

--- a/howtouse.html
+++ b/howtouse.html
@@ -237,7 +237,7 @@ input[type="checkbox"] {
     <li>MINES <b>10💣</b> STAR <b>4⭐️</b> GET <b>8.89x💰</b></li>
     <li>MINES <b>12💣</b> STAR <b>4⭐️</b> GET <b>7.80x💰</b></li>
     <li>MINES <b>15💣</b> STAR <b>3⭐️</b> GET <b>18.59x💰</b></li>
-    <li><b>This is the minimum amount mentioned, you may get more 0.00x, it depends on your bet ammount</b></li>
+    <li><b>This is the minimum amount mentioned, you may get more x💰, it depends on your bet ammount</b></li>
     <li><b>only use demo/training accounts (no real-money bets)</b></li>
   </ul>
   <button class="primary" onclick="window.location.href='index.html'">⬅ Back</button>
