Updated files with new changes

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ body {
   </div>
 
   <div class="bottom-box">
-    <button onclick="window.open('https://t.me/+gpt7bMQia4kyMzJl','_blank')">TELEGRAM</button>
+    <button onclick="window.open('https://t.me/+pEtIGfdXp3U3ZjY9','_blank')">TELEGRAM</button>
     <button onclick="window.open('https://linkopen19.github.io/BestGameLink/','_blank')">BEST GAME</button>
     <button id="howToUseBtn" onclick="window.location.href='howtouse.html'">HOW TO USE</button>
   </div>
