Updated files with new changes

--- a/howtouse.html
+++ b/howtouse.html
@@ -228,16 +228,15 @@ input[type="checkbox"] {
   </ul>
   <ul>
     <h2>MINES & STAR DETAILS</h2>
-    <li>MINES <b>1💣</b> STAR <b>20⭐️</b> GET <b>4.85x💰</b></li>
-    <li>MINES <b>2💣</b> STAR <b>15⭐️</b> GET <b>6.47x💰</b></li>
-    <li>MINES <b>3💣</b> STAR <b>10⭐️</b> GET <b>4.90x💰</b></li>
-    <li>MINES <b>4💣</b> STAR <b>8⭐️</b> GET <b>5.15x💰</b></li>
-    <li>MINES <b>5💣</b> STAR <b>7⭐️</b> GET <b>6.01x💰</b></li>
-    <li>MINES <b>6💣</b> STAR <b>6⭐️</b> GET <b>6.33x💰</b></li>
-    <li>MINES <b>10💣</b> STAR <b>4⭐️</b> GET <b>8.89x💰</b></li>
-    <li>MINES <b>12💣</b> STAR <b>4⭐️</b> GET <b>7.80x💰</b></li>
-    <li>MINES <b>15💣</b> STAR <b>3⭐️</b> GET <b>18.59x💰</b></li>
-    <li><b>This is the minimum amount mentioned, you may get more x💰, it depends on your bet ammount</b></li>
+    <li>MINES <b>1💣</b> STAR <b>20⭐️</b></li>
+    <li>MINES <b>2💣</b> STAR <b>14⭐️</b></li>
+    <li>MINES <b>3💣</b> STAR <b>9⭐️</b></b></li>
+    <li>MINES <b>4💣</b> STAR <b>7⭐️</b></b></li>
+    <li>MINES <b>5💣</b> STAR <b>6⭐️</b></b></li>
+    <li>MINES <b>6💣</b> STAR <b>4⭐️</b></b></li>
+    <li>MINES <b>10💣</b> STAR <b>3⭐️</b></b></li>
+    <li>MINES <b>12💣</b> STAR <b>2⭐️</b></b></li>
+    <li>MINES <b>15💣</b> STAR <b>1⭐️</b></b></li>
     <li><b>only use demo/training accounts (no real-money bets)</b></li>
   </ul>
   <button class="primary" onclick="window.location.href='index.html'">⬅ Back</button>
