Updated files with new changes

--- a/howtouse.html
+++ b/howtouse.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>How to Use – Mines Hack</title>
+<title>How to Use - MINES FUN LAB</title>
 <style>
 :root {
   --bg:#1b1f38;
@@ -33,7 +33,6 @@ body {
   padding:20px;
   box-sizing:border-box;
   min-height:100vh;
-  transition: filter 0.3s ease;
 }
 
 h2 {
@@ -54,15 +53,6 @@ ul {
   color:#e6e9ff;
   font-size:14px;
 }
-.image-box {
-  text-align:center;
-  margin:20px 0;
-}
-.image-box img {
-  max-width:100%;
-  border-radius:12px;
-  box-shadow:0 8px 25px rgba(0,0,0,0.6);
-}
 button.primary {
   width:100%;
   padding:12px;
@@ -79,12 +69,8 @@ button.primary:hover {
   transform:translateY(-2px);
   filter:brightness(1.1);
 }
-.blocked {
-  filter:blur(3px) brightness(0.75);
-  pointer-events:none;
-  user-select:none;
-}
 
+/* Disclaimer modal */
 #disclaimer-modal {
   position:fixed;
   inset:0;
@@ -216,34 +202,34 @@ input[type="checkbox"] {
 </head>
 <body>
 
-<div class="app blocked" id="main-app" aria-hidden="true">
+<div class="app" id="main-app">
   <h2>How to Use</h2>
-  <h3><b>(HACK) HYPER ALGORITHMIC CALCULATION KIT</b></h3>
-  <h3>USE FOR ALL PLATFORM & ALL COUNTRY ex: 51GAME, 91CLUB, BIG DADDY, BIG MUMBAI, STAKE, 1WIN, 1XBET, PARI MATCH, ETC</h3>
+  <h3><b>MINES FUN LAB</b></h3>
+  <h3>Use for fun/demo purposes only. No real-money gambling!</h3>
   <ul>
     <li>Select your mines using the dropdown arrow.</li>
-    <li>Click <b>START</b> to reveal results.</li>
+    <li>Click <b>START</b> to reveal random results.</li>
     <li>Use <b>NEXT</b> to continue playing with the same mines.</li>
     <li>To change mines, click the arrow again → it resets everything.</li>
+    <li>Only demo/training accounts, no real-money bets.</li>
   </ul>
   <ul>
     <h2>MINES & STAR DETAILS</h2>
-    <li>MINES <b>1💣</b> STAR <b>20⭐️</b></li>
-    <li>MINES <b>2💣</b> STAR <b>14⭐️</b></li>
-    <li>MINES <b>3💣</b> STAR <b>9⭐️</b></b></li>
-    <li>MINES <b>4💣</b> STAR <b>7⭐️</b></b></li>
-    <li>MINES <b>5💣</b> STAR <b>6⭐️</b></b></li>
-    <li>MINES <b>6💣</b> STAR <b>4⭐️</b></b></li>
-    <li>MINES <b>10💣</b> STAR <b>3⭐️</b></b></li>
-    <li>MINES <b>12💣</b> STAR <b>2⭐️</b></b></li>
-    <li>MINES <b>15💣</b> STAR <b>1⭐️</b></b></li>
-    <li><b>only use demo/training accounts (no real-money bets)</b></li>
+    <li>MINES <b>1💣</b> STAR <b>20⭐</b></li>
+    <li>MINES <b>2💣</b> STAR <b>14⭐</b></li>
+    <li>MINES <b>3💣</b> STAR <b>9⭐</b></li>
+    <li>MINES <b>4💣</b> STAR <b>7⭐</b></li>
+    <li>MINES <b>5💣</b> STAR <b>6⭐</b></li>
+    <li>MINES <b>6💣</b> STAR <b>4⭐</b></li>
+    <li>MINES <b>10💣</b> STAR <b>3⭐</b></li>
+    <li>MINES <b>12💣</b> STAR <b>2⭐</b></li>
+    <li>MINES <b>15💣</b> STAR <b>1⭐</b></li>
   </ul>
   <button class="primary" onclick="window.location.href='index.html'">⬅ Back</button>
 </div>
 
 <!-- Permanent Disclaimer Button -->
-<button id="disclaimer-btn">disclaimer</button>
+<button id="disclaimer-btn">Disclaimer</button>
 
 <div id="disclaimer-modal" role="dialog" aria-modal="true" aria-labelledby="disclaimer-title">
   <div class="disclaimer-card">
@@ -251,18 +237,15 @@ input[type="checkbox"] {
       <h3 id="disclaimer-title">Important Disclaimer — Read Carefully</h3>
     </div>
     <div class="disclaimer-body">
-      <p><strong>Play at your own risk.</strong> This is a luck-based game and <strong>results are random.</strong> No guarantees are provided. Screenshots and videos are for demonstration, educational, and entertainment purposes only. Please play only on demo/training accounts for fun.</p>
-      <p><strong>We do not promote gambling.</strong> This tool is shared for fun and educational purposes only. Links are provided only for open demo accounts.</p>
-      <p><strong>Platforms:</strong> "USE FOR ALL PLATFORM" refers to platforms where mines-style games exist. <strong>Use those platforms only on demo/training accounts.</strong></p>
-      <p><strong>Countries & legality:</strong> "USE FOR ALL COUNTRY" is informational only. Follow your local laws.</p>
-      <p><strong>Seller / buyer responsibility:</strong> Buyers must ensure legality. We assume demo, educational, or entertainment use only.</p>
-      <p><strong>We do NOT hack games:</strong> This product is a "Hyper Algorithmic Calculation Kit" — it is NOT a game hack.</p>
-      <p><strong>Note: This APK was created purely for fun and time-pass purposes. The price is set at ₹555 / $7 for delivery and support.</p>
-      <p><strong>Note:</strong> This website is created with the help of ChatGPT using HTML, CSS, and JavaScript, and converted to an APK using WebIntoApp.</p>
+      <p><strong>Results are random.</strong> No real-money bets allowed.</p>
+      <p><strong>We do not promote gambling.</strong> This tool is for educational and fun purposes only.</p>
+      <p><strong>Platforms:</strong> Use demo accounts only on supported mines-style games.</p>
+      <p><strong>Countries & legality:</strong> Follow your local laws. This is informational only.</p>
+      <p><strong>Note:</strong> We do NOT hack any games. This is a standalone fun lab.</p>
     </div>
     <div class="disclaimer-controls">
       <div class="ctrl-row"><label><input type="checkbox" id="age-confirm"> I confirm I am 18 years or older</label></div>
-      <div class="ctrl-row"><label><input type="checkbox" id="demo-confirm"> I will only use demo/training accounts (no real-money bets)</label></div>
+      <div class="ctrl-row"><label><input type="checkbox" id="demo-confirm"> I will only use demo/training accounts</label></div>
       <div class="actions">
         <button id="got-it" class="btn-primary" disabled>I Understand — Proceed</button>
       </div>
@@ -285,14 +268,14 @@ input[type="checkbox"] {
 
   function openModal(){
     modal.classList.add('show');
-    app.classList.add('blocked');
+    app.style.filter='blur(3px) brightness(0.75)';
     document.body.style.overflow='hidden';
     setTimeout(()=>{ageConfirm.focus();},100);
   }
 
   function closeModal(){
     modal.classList.remove('show');
-    app.classList.remove('blocked');
+    app.style.filter='';
     document.body.style.overflow='';
   }
 
@@ -304,7 +287,7 @@ input[type="checkbox"] {
   discBtn.addEventListener('click',openModal);
 
   window.addEventListener('load',()=>{
-    // ALWAYS show disclaimer on every page load
+    // Show disclaimer every page load
     openModal();
     updateBtn();
   });
