--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>MINES HACK</title>
+<title>MINES FUN LAB</title>
 <style>
 :root {
   --box:60px;
@@ -232,14 +232,13 @@ body {
     filter: brightness(1.1);
   }
 }
-
 </style>
 </head>
 <body>
 <div class="app">
   <div class="card">
     <div class="cardimg"><img src="logo.png" alt="logo"></div>
-    <div class="cardinfo">MINES HACK 💎<br>USE 4 ALL PLATFORM 🎮<br>USE 4 ALL COUNTRY 🌐</div>
+    <div class="cardinfo">MINES FUN LAB 💎 USE </div>
   </div>
 
   <div class="main-box">
@@ -266,8 +265,7 @@ body {
   </div>
 
   <div class="bottom-box">
-    <button onclick="window.open('https://t.me/+pEtIGfdXp3U3ZjY9','_blank')">TELEGRAM</button>
-    <button onclick="window.open('https://linkopen19.github.io/BestGameLink/','_blank')">BEST GAME</button>
+    <button onclick="window.open('https://t.me/helper219','_blank')">TELEGRAM</button>
     <button id="howToUseBtn" onclick="window.location.href='howtouse.html'">HOW TO USE</button>
   </div>
 </div>
@@ -334,7 +332,7 @@ arrowBtn.addEventListener('click',()=>{
 dropdown.querySelectorAll('div').forEach(opt=>{
   opt.addEventListener('click',()=>{
     selectedMines=parseInt(opt.dataset.value,10);
-    selectedText.textContent=`Your selected mines: ${opt.textContent}`;
+    selectedText.textContent = `Your selected mines: ${opt.textContent}`;
     dropdown.style.display='none';
     stopBlink(arrowBtn);
     blink(startBtn,false);
