Updated files with new changes

--- a/howtouse.html
+++ b/howtouse.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>How to Use - MINES FUN LAB</title>
+<title>How to Use - MINES LAB</title>
 <style>
 :root {
   --bg:#1b1f38;
@@ -204,7 +204,7 @@ input[type="checkbox"] {
 
 <div class="app" id="main-app">
   <h2>How to Use</h2>
-  <h3><b>MINES FUN LAB</b></h3>
+  <h3><b>MINES LAB</b></h3>
   <h3>Use for fun/demo purposes only. No real-money gambling!</h3>
   <ul>
     <li>Select your mines using the dropdown arrow.</li>
