--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ body {
 <div class="app">
   <div class="card">
     <div class="cardimg"><img src="logo.png" alt="logo"></div>
-    <div class="cardinfo">MINES FUN LAB 💎 </div>
+    <div class="cardinfo">MINES LAB 💎 </div>
   </div>
 
   <div class="main-box">
