--- a/howtouse.html
+++ b/howtouse.html
@@ -204,7 +204,7 @@ input[type="checkbox"] {
 
 <div class="app" id="main-app">
   <h2>How to Use</h2>
-  <h3><b>MINES LAB</b></h3>
+  <h3><b>MINES HACK</b></h3>
   <h3>Use for fun/demo purposes only. No real-money gambling!</h3>
   <ul>
     <li>Select your mines using the dropdown arrow.</li>
@@ -237,11 +237,16 @@ input[type="checkbox"] {
       <h3 id="disclaimer-title">Important Disclaimer — Read Carefully</h3>
     </div>
     <div class="disclaimer-body">
-      <p><strong>Results are random.</strong> No real-money bets allowed.</p>
-      <p><strong>We do not promote gambling.</strong> This tool is for educational and fun purposes only.</p>
-      <p><strong>Platforms:</strong> Use demo accounts only on supported mines-style games.</p>
-      <p><strong>Countries & legality:</strong> Follow your local laws. This is informational only.</p>
-      <p><strong>Note:</strong> We do NOT hack any games. This is a standalone fun lab.</p>
+      <p><strong>HACK</strong>HYPER AMUSEMENT & CHANCE KIT</p>
+       <p><strong>1. Randomized Results:</strong> All results are algorithm-based and not connected to any external gaming or betting server.</p>
+      <p><strong>2. Educational Purpose:</strong> This project exists for fun, demo, and algorithm-testing use only. No money or prizes are involved.</p>
+      <p><strong>3. No Real-Money Play:</strong> We do not support or allow gambling, betting, or paid predictions.</p>
+      <p><strong>4. User Responsibility:</strong> It is your responsibility to comply with your country’s or state’s laws regarding gaming and simulations.</p>
+      <p><strong>5. Privacy:</strong> This app does not collect, share, or store user data, UPI, wallet, or login information.</p>
+      <p><strong>6. Refund Policy:</strong> Since no purchases or deposits occur within this app, no refunds apply to demo access or usage.</p>
+      <p><strong>7. Brand Independence:</strong> MINES HACK is an independent demo tool. It is not affiliated with or endorsed by any gaming platform.</p>
+      <p><strong>8. Age Limit:</strong> 18+ Only.</p>
+      <p><strong>9. Note:</strong> This tool is for educational, entertainment and time pass purpose only.</p>
     </div>
     <div class="disclaimer-controls">
       <div class="ctrl-row"><label><input type="checkbox" id="age-confirm"> I confirm I am 18 years or older</label></div>
