--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>MINES FUN LAB</title>
+<title>MINES</title>
 <style>
 :root {
   --box:60px;
@@ -238,7 +238,7 @@ body {
 <div class="app">
   <div class="card">
     <div class="cardimg"><img src="logo.png" alt="logo"></div>
-    <div class="cardinfo">MINES LAB 💎 </div>
+    <div class="cardinfo">MINES HACK💎 </div>
   </div>
 
   <div class="main-box">
