Updated files with new changes

--- a/howtouse.html
+++ b/howtouse.html
@@ -243,7 +243,7 @@ input[type="checkbox"] {
       <p><strong>3. No Real-Money Play:</strong> We do not support or allow gambling, betting, or paid predictions.</p>
       <p><strong>4. User Responsibility:</strong> It is your responsibility to comply with your country’s or state’s laws regarding gaming and simulations.</p>
       <p><strong>5. Privacy:</strong> This app does not collect, share, or store user data, UPI, wallet, or login information.</p>
-      <p><strong>6. Refund Policy:</strong> Since no purchases or deposits occur within this app, no refunds apply to demo access or usage.</p>
+      <p><strong>6. Refund</strong> All sales are final, no refund.</p>
       <p><strong>7. Brand Independence:</strong> MINES HACK is an independent demo tool. It is not affiliated with or endorsed by any gaming platform.</p>
       <p><strong>8. Age Limit:</strong> 18+ Only.</p>
       <p><strong>9. Note:</strong> This tool is for educational, entertainment and time pass purpose only.</p>
